# BlocklyDuino-v2

./: CHANGELOG.txt  LICENSE  README.md  TODO.txt  index.html  sync.ffs_db  term.html
.github/: FUNDING.yml
@blockly/: Google's Blockly.url  headjs.js
@blockly/demos/code/: code.js
@blockly/demos/code/msg/: ca.js  de.js  en.js  es.js  fr.js  ja.js
@blockly/demos/custom-dialogs/: custom-dialog.js
@blockly/msg/js/: es.js
@blockly/tests/playgrounds/: screenshot.js
TclHTTPD/: .gitignore  AUTHORS  ArduinoHttpd.tcl  Makefile.am  Makefile.am~  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac  configure.ac~
TclHTTPD/BuildData/: Makefile.am  Makefile.in
TclHTTPD/BuildScripts/: AddKitDir.kit  AddKitDir.tcl  AddKitFile.kit  AddKitFile.tcl  MakePkgIndex.kit  MakePkgIndex.tcl  MakeVersion.kit  MakeVersion.tcl  MakeVersionHelp.kit  MakeVersionHelp.tcl  Makefile.am  Makefile.in
TclHTTPD/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
TclHTTPD/m4/: ax_tcl_libraries.m4  ax_tcl_libraries.m4~  tcl.m4
blockly/demos/code/: code.js
blockly/demos/keyboard_nav/: index.html  line_cursor.js
blockly/msg/js/: ca.js
blockly/tests/playgrounds/: iframe.html  screenshot.js
blocklyduino/: code.js  serialMonitor.html  serialMonitor.js
blocklyduino/arduino/: arduino_base.js  typed_variable.js
blocklyduino/arduino/addon/: X-NUCLEO-IKS01A3.js  ds18b20.js  grove.js  relay.js  servo.js
blocklyduino/arduino/blockly/: colour.js  lists.js  logic.js  loops.js  math.js  procedures.js  text.js
blocklyduino/arduino/board/: board_base.js  board_serial.js
blocklyduino/blocks/: blocks_colors.js  matrix_block.js  type_variable.js  typed_variable.js
blocklyduino/blocks/X-NUCLEO-IKS01A3/: X-NUCLEO-IKS01A3.js
blocklyduino/blocks/arduino_base/: arduino_base.js
blocklyduino/blocks/blockly/: logic.js  math.js  text.js
blocklyduino/blocks/board/: board_base.js  board_serial.js
blocklyduino/blocks/ds18b20/: ds18b20.js
blocklyduino/blocks/grove/: grove.js
blocklyduino/blocks/relay/: relay.js
blocklyduino/blocks/servo/: servo.js
blocklyduino/blocks/servoB@AIO/: servo.js
blocklyduino/css/: blocklyduino.css  keyboard_nav.css  lateral-panel.css  overload.css  override_css.css  prettify.css  serialMonitor.css  style.css
blocklyduino/examples/: click_color.xml  servo_potentio.xml
blocklyduino/generators/: arduino_generator.js
blocklyduino/generators/arduino/: arduino_base.js  typed_variable.js  variables_dynamic.js
blocklyduino/generators/arduino/addon/: grove.js  servo.js
blocklyduino/generators/arduino/blockly/: colour.js  lists.js  logic.js  loops.js  math.js
blocklyduino/js/: arduino_boards.js  boards.js  boards.json  buttons_functions.js  dialog.js  override_toolbox.js  renderingConstant.js  typed_variable.js
blocklyduino/js/addon/: prettify.js  run_prettify.js
blocklyduino/js/blockly/: code.js  keyboard_nav.js  playground.js  screenshot.js  variables_dynamic.js  variables_dynamic2.js
blocklyduino/msg/: UI_ca.js  UI_de.js  UI_en.js  UI_es.js  UI_fr.js  UI_ja.js  blocklyduino_de.js  blocklyduino_en.js  blocklyduino_fr.js  blocklyduino_ja.js  blocks_ar.js  blocks_ca.js  blocks_de.js  blocks_en.js  blocks_es.js  blocks_fr.js  blocks_ja.js  categories_ar.js  categories_ca.js  categories_de.js  categories_en.js  categories_es.js  categories_fr.js  categories_ja.js
blocklyduino/themes/: bw.js  themes_blocks.js  themes_categories.js  themes_components.js  themes_components_override.js
blocklyduino/toolbox/: blocklyduino.xml  toolbox_X_NUCLEO_IKS01A3.json  toolbox_arduino.json  toolbox_blocklyduino.js  toolbox_ds18b20.json  toolbox_grove.json  toolbox_relay.json  toolbox_servo.json  toolbox_standard.js  toolbox_standard.json
css/: UI.css  font_awesome_all.min.css  keyboard_nav.css  lateral-panel.css  style.css
electron/: serialMonitor.html
electron/css/: serialMonitorPlotter.css
electron/js/: serialMonitorPlotter.js
electron/js/addon/: smoothie.js
examples/: blink.xml
generators/: arduino_generator.js
js/: boards.js  boards.json  boards2.js  buttons_functions.js  dialog.js  init.js  renderingConstant.js  toolbox.js  typed_variable.js
js/blockly/: keyboard_nav.js  playground.js
js/headjs/: head.load.min.js.map
msg/: UI_ar.js  UI_ca.js  UI_de.js  UI_en.js  UI_es.js  UI_fr.js  UI_ja.js
tools/RGB/: Convertisseur de couleurs en HEX et RGB et visualisation.URL
tools/blockFactory/: blockFactory.html  codeFactory.js  factory.js
tools/blockFactory/msg/: ar.js  ca.js  de.js  en.js  es.js  fr.js  ja.js
tools/hackcable/: CHANGELOG.txt  README.md  index.html
tools/hackcable/css/: hackcable.css
tools/hackcable/js/: addline.js  addpoint.js  background.js  context.js  element.js  init.js  init_vars.js  stage.js
tools/hackcable/parts/: components_database.js  fritzingfritzing-parts Electronic components for use in the Fritzing app (aka the parts library).URL
tools/html/: codeddraigffau Ffau - A Blocky-based editor for teaching HTML and CSS..URL  html_factory.html
